--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 id="navcol-1">
                 <ul class="nav navbar-nav">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Main</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about_us.html" target="_parent">About Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="about&contacts.html" target="_parent">About & Contacts</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="about.html" target="_parent">About Us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">Projects</a></li>
                 </ul>
                 <form class="form-inline mr-auto" target="_self">
