--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 id="navcol-1">
                 <ul class="nav navbar-nav">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Main</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="site_update_v2021.2.0.abcdenf4a1/about&contacts.html" target="_parent">About & Contacts</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="site_update_v2021.2.0.abcdenf4a1\about&contacts.html" target="_parent">About & Contacts</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about.html" target="_parent">About Us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">Projects</a></li>
                 </ul>
