--- a/site_update_v2021.2.0.abcdenf4a1/join_us.html
+++ b/site_update_v2021.2.0.abcdenf4a1/join_us.html
@@ -11,14 +11,14 @@
   
   
   <title>Join Us</title>
-  <link rel="stylesheet" href="assets//tether/tether.min.css">
-  <link rel="stylesheet" href="assets//bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets//bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets//bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets//dropdown/css/style.css">
-  <link rel="stylesheet" href="assets//socicon/css/styles.css">
-  <link rel="stylesheet" href="assets//theme/css/style.css">
-  <link rel="preload" as="style" href="assets//vscode/css/mbr-additional.css"><link rel="stylesheet" href="assets//vscode/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" as="style" href="assets/vscode/css/mbr-additional.css"><link rel="stylesheet" href="assets/vscode/css/mbr-additional.css" type="text/css">
   
   
   
@@ -110,7 +110,7 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="pgg+pAX/LDRI9PTFbZ8JbdGiW+vPeaITG/GCDAt2uPW93g8AsPFgbelUVbhgCdPXHDTyoBFl9eB+q1E/+kgz1FCmx3dDvbtl2cxdFhtUkz9NKQ1hq5R/cm80bkx0o6Qz">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="mm/fHP4txIhKy5+zJGDL6bgowYJdcz9wy/1HA+EY3dRR66FCqeImk28K79ivYEkBmaDSO1P4P02Wbp7dHCdcvoStg7h8UU/DGQSaW6eD/A5V8byBya8o3H+emOnXlce9">
                     <div class="">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! We will contact you soon.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
