--- a/site_update_v2021.2.0.abcdenf4a1/about&contacts.html
+++ b/site_update_v2021.2.0.abcdenf4a1/about&contacts.html
@@ -11,18 +11,18 @@
   
   
   <title>About & Contacts</title>
-  <link rel="stylesheet" href="assets//web/assets//vscode-icons2/mobirise2.css">
-  <link rel="stylesheet" href="assets//tether/tether.min.css">
-  <link rel="stylesheet" href="assets//bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets//bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets//bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets//dropdown/css/style.css">
-  <link rel="stylesheet" href="assets//formstyler/jquery.formstyler.css">
-  <link rel="stylesheet" href="assets//formstyler/jquery.formstyler.theme.css">
-  <link rel="stylesheet" href="assets//datepicker/jquery.datetimepicker.min.css">
-  <link rel="stylesheet" href="assets//socicon/css/styles.css">
-  <link rel="stylesheet" href="assets//theme/css/style.css">
-  <link rel="preload" as="style" href="assets//vscode/css/mbr-additional.css"><link rel="stylesheet" href="assets//vscode/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/web/assets//vscode-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
+  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
+  <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" as="style" href="assets/vscode/css/mbr-additional.css"><link rel="stylesheet" href="assets/vscode/css/mbr-additional.css" type="text/css">
   
   
   
