--- a/site_update_v2021.2.0.abcdenf4a1/join_us.html
+++ b/site_update_v2021.2.0.abcdenf4a1/join_us.html
@@ -82,10 +82,10 @@
                                 Fill this form and we'll get back to you soon.</p>
                         </div>
                         <div class="col-lg-12 col-md col-12 form-group" data-for="name">
-                            <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form4-6">
+                            <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form4-6" required>
                         </div>
                         <div class="col-lg-12 col-md col-12 form-group" data-for="email">
-                            <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control" value="" id="email-form4-6">
+                            <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control" value="" id="email-form4-6" required>
                         </div>
                         <div class="col-12 col-md-auto mbr-section-btn">
                             <button type="submit" class="btn btn-secondary display-4">Submit</button>
@@ -126,10 +126,10 @@
                             <p class="mbr-text mbr-fonts-style mb-5 display-7">Technology is man's future! Subscribe to our newsletter and get all latest updates from our website.</p>
                         </div>
                         <div class="col-md col-12 form-group" data-for="name">
-                            <input type="text" name="name" placeholder="Name" data-form-field="Name" class="form-control" id="name-form1-7">
+                            <input type="text" name="name" placeholder="Name" data-form-field="Name" class="form-control" id="name-form1-7" required>
                         </div>
                         <div class="col-md col-12 form-group" data-for="email">
-                            <input type="email" name="email" placeholder="Email" data-form-field="Email" class="form-control" id="email-form1-7">
+                            <input type="email" name="email" placeholder="Email" data-form-field="Email" class="form-control" id="email-form1-7" required>
                         </div>
                         <div class="mbr-section-btn col-12 col-md-auto">
                             <button type="submit" class="btn btn-primary display-4">Subscribe</button>
