--- a/site_update_v2021.2.0.abcdenf4a1/about&contacts.html
+++ b/site_update_v2021.2.0.abcdenf4a1/about&contacts.html
@@ -95,16 +95,16 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-md col-sm-12 form-group" data-for="name">
-                            <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form5-2">
+                            <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form5-2" required>
                         </div>
                         <div class="col-md col-sm-12 form-group" data-for="email">
-                            <input type="email" name="email" placeholder="E-mail" data-form-field="email" class="form-control" value="" id="email-form5-2">
+                            <input type="email" name="email" placeholder="E-mail" data-form-field="email" class="form-control" value="" id="email-form5-2" required>
                         </div>
                         <div class="col-12 form-group" data-for="url">
                             <input type="url" name="url" placeholder="Your Site" pattern="https://.*" data-form-field="url" class="form-control" value="" id="url-form5-2">
                         </div>
                         <div class="col-12 form-group" data-for="textarea">
-                            <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form5-2"></textarea>
+                            <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form5-2" required></textarea>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn">
                             <button type="submit" class="btn btn-primary display-4">Send message</button>
@@ -149,7 +149,7 @@
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Email</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:info@site.com" class="text-primary">kbps.10240@gmail.com</a>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:kbps.10240@gmail.com" class="text-primary">kbps.10240@gmail.com</a>
                         </p>
                     </div>
                 </div>
